--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,10 +10,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+        <a href="/blog/">Blog</a>
 
-		<h1>My Astro Site.</h1>
-	</body>
+        <h1>About Me</h1>
+        <h2>... and mon site Astro!</h2>
+      
+        <p>Test de Astro suite à une recommandation</p>
+    </body>
 </html>
