--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,10 +10,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+        <a href="/blog/">Blog</a>
 
-		<h1>My Astro Site.</h1>
-	</body>
+        <h1>Blog</h1>
+      
+        <p>Un jour peut-être des articles (non)</p>
+      
+    </body>
 </html>
